--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,24 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1ABC9C" />
+    <meta
+      name="description"
+      content="Workly: Plataforma de capacitación y empleo."
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=swap" rel="stylesheet">
     <title>Workly App</title>
+
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <noscript>Necesitas habilitar JavaScript para correr esta aplicación.</noscript>
-    <div id="root"></div> 
-  </body>
+    
+    <div id="root"></div>
+
+    </body>
 </html>
